<resources>
    <string name="app_name">Glympse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>

    <string name="title_register">REGISTER</string>
    <string name="title_attention">Attention!</string>

    <string name="message_email_empty">Email cannot be empty.</string>
    <string name="message_email_not_valid">Please enter valid email address.</string>
    <string name="msg_invalid_name">Please enter valid name.</string>
    <string name="msg_invalid_phone_no">Please enter valid phone number.</string>
    <string name="valid_msg_empty_password">Please enter password.</string>
    <string name="msg_password_lenght">Password length should be greater than 6.</string>
    <string name="msg_empty_confirm_password">Please re-enter password.</string>
    <string name="password_not_match">Password did not match.</string>
    <string name="msg_accept_tnc">Please accept terms and conditions.</string>
    <string name="no_connectin">No internet connection.</string>
    <string name="msg_loading">please wait.....</string>
    <string name="permission_not_accepted_read_phone_state" >Sorry, you can\'t use app without accepting phone state permission!</string>
    <string name="permission_not_accepted_access_location">Sorry, you can\'t use app without accepting location permission!</string>
    <string name="msg_server_error">There is a problem with our system. We apologize for the inconvenience caused. Please try again later. If the problem persist, please contact at support@glympse.com.</string>
    <string name="title_success">Success</string>
    <string name="dialog_error_title">ERROR</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_yes">YES</string>
    <string name="title_home">HOME</string>
    <string name="btn_save">SAVE</string>
    <string name="title_password_changed">Password Changed!</string>
    <string name="msg_invalid_phone_no_length">Please enter phone no. with length 10!</string>
    <string name="title_permissions">Permissions</string>
    <string name="title_login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="tv_forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="hint_name">Name</string>
    <string name="hint_phoneNo">Phone No</string>
    <string name="hint_confirmPasswd">Confirm Password</string>
    <string name="hint_address">Address</string>
    <string name="accept_t_and_s">By creating an account you agree to our</string>
    <string name="terms_n_condition">Terms and Conditions.</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="submit">submit</string>
    <string name="alreadyhaevanaccount">Already have an account?</string>
    <string name="title_about_us">About Us</string>
    <string name="title_help">Help</string>
    <string name="title_history">History</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_my_home">Home</string>
    <string name="tv_send_request">Send</string>
    <string name="label_home">HOME</string>
    <string name="dialog_action_ok">OK</string>
    <string name="text_request_sent">Request Sent</string>
    <string name="dialog_view_details">sfdf</string>
    <string name="msg_invalid_address">Address cannot be empty!</string>
    <string name="tv_cancel_request">CANCEL REQUEST</string>
    <string name="rb_mech_reach_late">Mechanic reach very late.</string>
    <string name="rb_other">Other reason.</string>
    <string name="rb_mech_change_mind">Changes my mind.</string>
    <string name="rb_mech_request_cancel">Mechanic request to cancel.</string>
    <string name="rb_mech_no_contact">No contact with mechanic.</string>
    <string name="btn_submit">Submit</string>
    <string name="title_mechanic_on_the_way">Mechanic on the Way</string>
    <string name="btn_call_mech">CALL</string>
    <string name="btn_cancel_request">CANCEL REQUEST</string>
    <string name="set_location">Set Location</string>
    <string name="describe_need">Describe your need.</string>
    <string name="tv_how_was_service">How was your service?</string>
    <string name="tv_write_review">Write Review</string>
    <string name="tv_share_experience">Please share your experience with us, it will help us provide better service.</string>
    <string name="title_rate_your_mech">Rate Your Mechanic</string>
    <string name="title_support">About Us</string>
    <string name="title_service_history_detail">History Detail</string>
    <string name="title_service_history">History</string>
    <string name="title_logout">Logout</string>
    <string name="logout_confirm">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="title_location">Location</string>
    <string name="title_your_need">Your Need</string>

</resources>
