<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorDateSelector"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tv_cancel_request"/>

    <RadioGroup
        android:id="@+id/rg_cancelReasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_mechLate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/rb_mech_reach_late"/>
        <RadioButton
            android:id="@+id/rb_noContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/rb_mech_no_contact"/>
        <RadioButton
            android:id="@+id/rb_mechReqCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:text="@string/rb_mech_request_cancel"/>
        <RadioButton
            android:id="@+id/rb_mechChangeMinc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:text="@string/rb_mech_change_mind"/>
        <RadioButton
            android:id="@+id/rb_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:text="@string/rb_other"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/darkOrange"
        android:text="@string/btn_submit"
        android:textColor="@android:color/white" />
</LinearLayout>