<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_setLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="16dp"
        android:text="@string/set_location"/>
    <LinearLayout
        android:layout_below="@+id/tv_setLocation"
        android:id="@+id/ll_searchLocation"
        android:clickable="true"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <ImageView
                android:id="@+id/tv_place_marker"
                android:src="@drawable/ic_search"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="4dp"/>
            <ProgressBar
                android:id="@+id/pb_addressLoading"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:visibility="gone"/>
        </FrameLayout>
        <TextView
            android:id="@+id/tv_locationName"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:lines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="Getting location"/>
        <ImageView
            android:id="@+id/iv_currentLocation"
            android:src="@drawable/ic_current_location"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp">
        <EditText
            android:background="@drawable/shape_rect_f_white_s_black"
            android:id="@+id/et_describe_need"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:hint="@string/describe_need"
            android:lines="3"/>

        <Button
            android:id="@+id/btn_sendRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/et_describe_need"
            android:background="@color/darkOrange"
            android:text="@string/tv_send_request"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</RelativeLayout>